tests/ui/traits/new-solver/generalize/generalize-proj-new-universe-index-2.stderr
error[E0284]: type annotations needed: cannot satisfy `<<Leaf as WithAssoc<_>>::Assoc as Id>::Assoc == <<Leaf as WithAssoc<_>>::Assoc as Id>::Assoc`
  --> $DIR/generalize-proj-new-universe-index-2.rs:74:5
   |
LL |     bound::<<Rigid as IdHigherRankedBound>::Assoc, <Wrapper<Leaf> as Id>::Assoc, _>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `<<Leaf as WithAssoc<_>>::Assoc as Id>::Assoc == <<Leaf as WithAssoc<_>>::Assoc as Id>::Assoc`
   |
note: required by a bound in `bound`
  --> $DIR/generalize-proj-new-universe-index-2.rs:69:21
   |
LL | fn bound<T: ?Sized, U: ?Sized, V: ?Sized>()
   |    ----- required by a bound in this function
LL | where
LL |     T: WithAssoc<U, Assoc = V>,
   |                     ^^^^^^^^^ required by this bound in `bound`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
